# find-random-number

./: LICENSE  README.md  main.py  pyproject.toml
backend/: backend.py  generate_number.py
gui/: game_tab.py  login_tab.py  main_window.py  results_tab.py  signals.py  styles.qss  workers.py
src/trouve_le_nombre/: main.py
src/trouve_le_nombre/gui/: __init__.py  login_tab.py
